# pyquartic-test

./: MANIFEST.in  README.md  build.py  pyproject.toml  pyquartic_nonumba.py  pyquartic_numba.py  setup.py  test_pyquartic.py
.github/workflows/: build-and-release-gh.yml  build-and-release.yml  release-pypi.yml
pyquartic/: __init__.py
